--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,12 @@
 version: '3.8'
 services:
+  redis:
+    image: redis:7-alpine
+    restart: always
   bot:
     build: .
+    depends_on:
+      - redis
     environment:
       BOT_TOKEN: ""
       ADMIN_ID: ""
